--- a/index.html
+++ b/index.html
@@ -1,13 +1,11 @@
 <!DOCTYPE html>
-    <html lang="en">
+    <html lang="pl">
         <head>
             <title>QUIZ</title>
             <link rel="stylesheet" href="style.css">
             <meta charset=utf-8 >
             <script src="questions.json" type="text/javascript"></script>
             <meta name="viewport" content="width=device-width, initial-scale=1">
-           <!-- <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet">
-            <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"></script>-->
             <meta charset=utf-8 >
             <script src="quiz.js" type="text/javascript"></script>
         </head>
